# ai-kit

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .secrets.baseline  CONTRIBUTING.md  DOCUMENTATION_INDEX.md  NOTEBOOK_CONSTITUTION_SUMMARY.md  PR_DESCRIPTION.md  README.md  TURBOREPO.md  VALIDATION.md  VERSIONS.md  justfile  package.json  pnpm-workspace.yaml  pyproject.toml  test_trufflehog.py  turbo.json
.github/: CI_TESTING.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  pre-commit.yml
.specify/memory/: constitution-update-summary-v1.10.0.md  constitution.md
.specify/templates/: plan-template.md  spec-template.md
.windsurf/rules/: specify-rules.md
apps/: README.md
apps/cli/: README.md  package.json  pyproject.toml
apps/cli/src/ai_kit/: __init__.py
apps/cli/src/ai_kit/cli/: __init__.py  main.py
apps/cli/src/ai_kit/cli/commands/: notebook.py
apps/cli/src/ai_kit/cli/core/: __init__.py  config.py  templates.py  validators.py
apps/cli/src/ai_kit/cli/utils/: __init__.py  git.py  output.py  prompts.py
apps/cli/src/ai_kit_cli/: __init__.py  main.py
apps/cli/tests/: test_cli.py  test_trufflehog_integration.py
apps/cli/tests/commands/: test_notebook.py
apps/cli/tests/core/: test_config.py  test_templates.py  test_validators.py
apps/cli/tests/utils/: test_git.py  test_output.py  test_prompts.py
docs/: setup-platform-specific.md  troubleshooting-ci.md  troubleshooting-turborepo.md  troubleshooting-venv.md  updating-dependencies.md
docs/notebooks/: compliance-officer-guide.md  governance.md  migration-guide.md
notebooks/: README.md
notebooks/compliance/: example-high-risk-ai.ipynb
notebooks/evaluations/: example-model-eval.ipynb
notebooks/reporting/: example-report.ipynb
notebooks/templates/: compliance-template.ipynb  evaluation-template.ipynb  exploratory-template.ipynb  reporting-template.ipynb  tutorial-template.ipynb
scripts/: add_papermill_parameters.py  create_example_report.py  update_templates_reproducibility.py
specs/001-setup-developer-experience/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-setup-developer-experience/checklists/: requirements.md
specs/002-i-think-we/: ANALYSIS_REMEDIATION_SUMMARY.md  CLI_ARCHITECTURE_DECISION.md  IMPLEMENTATION_SUMMARY.md  MANUAL_TESTING_CHECKLIST.md  MIGRATION_SECRET_SCANNING.md  OPTION2_IMPLEMENTATION.md  data-model.md  plan.md  quickstart.md  research-secret-scanning.md  research.md  spec.md  tasks.md
specs/002-i-think-we/checklists/: requirements.md
specs/002-i-think-we/contracts/: cli-interface.md
