[project]
name = "ai-kit"
version = "0.1.0"
description = "AI toolkit for French Government digital services"
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }

[dependency-groups]
dev = [
    "pre-commit>=4.0.0",
]

[tool.uv.workspace]
members = ["apps/*", "packages/*"]

[tool.uv.sources]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["ai_kit"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
